# audio-transcription-platform-demo

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/api/: Dockerfile
apps/api/src/api_app/: __init__.py  main.py
apps/api/tests/: test_api_jobs.py
apps/web/: package-lock.json  package.json
apps/web/__tests__/: TranscriptionDemo.test.tsx
apps/web/app/: layout.tsx  page.tsx  styles.css
apps/web/components/: TranscriptionDemo.tsx
apps/web/lib/: api.ts
apps/worker/: Dockerfile
apps/worker/src/worker_app/: __init__.py  main.py
apps/worker/tests/: test_worker_processor.py
