[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-transcription-platform-demo"
version = "0.1.0"
description = "Sanitized public demo of an async audio transcription pipeline"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pydantic>=2.0",
    "uvicorn[standard]>=0.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = [
    "packages/core/src",
    "apps/api/src",
    "apps/worker/src",
]

[tool.pytest.ini_options]
pythonpath = [
    "packages/core/src",
    "apps/api/src",
    "apps/worker/src",
]
testpaths = [
    "packages/core/tests",
    "apps/api/tests",
    "apps/worker/tests",
]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
